mdapipkg/objects/Event_Association__c.object
<CustomObject>
    <description>Junction Object between Account and Event</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Master detail to account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Chapter_Event_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>Master detail to event object</description>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipName>Chapter_Event_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <label>Event Association</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>Event__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Association Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>